Adding  home work