@@ -1,17 +1,14 @@
 package homework4;
 
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.TreeSet;
+import java.util.*;
 
 public class OrderProcessingCollection {
 
     public static void main(String[] args) {
 
-        String[] orders = {"002", "004", "003", "001", "005", "001", "002", "004", "005"};
+        String[] orders = {"order2", "order2", "order3", "order1", "order2", "order3", "order4", "order3", "order3"};
 
-        Set<String> noDuplicateOrders = new HashSet<>(List.of(orders));
+        Set<String> noDuplicateOrders = new HashSet<>(Arrays.asList(orders));
         Set<String> noDuplicateOrders2 = new TreeSet<>(List.of(orders));
 
         System.out.println(noDuplicateOrders);
